Decanter 161: Fixing horizontal scrolling on collapsed page grids.

--- a/scss/components/templates/_page-layout--left-sidebar.scss
+++ b/scss/components/templates/_page-layout--left-sidebar.scss
@@ -10,29 +10,7 @@
 // Style guide: Templates.Page Layout: Left sidebar
 //
 
-.page-layout--inner--left-sidebar {
-  @include grid-container;
-  @include grid-collapse;
-  @include grid-visual;
-
-  @include grid-media($grid-xs) {
-    @include grid-container($grid-xs);
-    @include grid-collapse;
-    @include grid-visual;
-  }
-
-  @include grid-media($grid-md) {
-    @include grid-container($grid-md);
-    @include grid-collapse;
-    @include grid-visual;
-  }
-
-  @include grid-media($grid-lg) {
-    @include grid-container($grid-lg);
-    @include grid-collapse;
-    @include grid-visual;
-  }
-
+.page-layout--left-sidebar {
   .column {
     &--head {
       @include grid-media($grid-xs) {
