--- a/scss/components/templates/_page-layout--right-sidebar.scss
+++ b/scss/components/templates/_page-layout--right-sidebar.scss
@@ -10,7 +10,7 @@
 // Style guide: Templates.Page Layout: Right sidebar
 //
 
-.page-layout--inner--right-sidebar {
+.page-layout--right-sidebar {
   .column {
     &--head {
       @include grid-media($grid-xs) {
